<resources>
    <string name="app_name">Yellows JobLog</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reports">Reports</string>
    <string name="dashboard">Dashboard</string>
    <string name="navigation">Navigation</string>
    <string name="manage">Manage</string>
    <string name="projects">Projects</string>
    <string name="clients">Clients</string>
    <string name="team">Team</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email address</string>
    <string name="what_are_u_workin_on">What are you working on?</string>
    <string name="users">Users</string>
    <string name="filter">Filter</string>
    <string name="active">Active</string>
    <string name="not_active">Not Active</string>
    <string name="yellows_logo">Yellows Logo</string>
    <string name="user_name">some text</string>
    <string name="timer_zero">0:00:00</string>
    <string name="time_range">11:40:23-12:30:23</string>
    <string name="joblog">JobLog</string>
    <string name="working_on_app">Working on App</string>
    <string name="time">8:00:00</string>
    <string name="joblog_logo">JobLog logo</string>
    <string name="date">Date</string>
    <string name="update">Update</string>
    <string name="client_name">Client name</string>
    <string name="add_client">Add client</string>
    <string name="project_name">Project name</string>
    <string name="add_project">Add project</string>
    <string-array name="colors_array">
        <item>Black</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Yellows</item>
        <item>Purple</item>
        <item>Green</item>
        <item>Brown</item>
        <item>Orange</item>
    </string-array>
</resources>
