<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/img_logo"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.064"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/logo"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:layout_marginEnd="130dp"
            android:layout_marginRight="130dp"
            android:layout_marginTop="330dp"
            android:layout_marginBottom="140dp"
            android:onClick="onClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.418"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="#727cf5"
            android:fontFamily="sans-serif"
            app:fontFamily="@font/nunito_sans"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_enter"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="130dp"
            android:layout_marginStart="130dp"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_login_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.306"
            app:layout_constraintHorizontal_bias="0.505"
            android:fontFamily="sans-serif"
            app:fontFamily="@font/nunito_sans" android:layout_marginLeft="40dp" android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp" android:layout_marginRight="40dp" android:layout_marginTop="143dp"
            android:layout_marginBottom="322dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:id="@+id/txt_login"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="234dp"
            android:layout_marginTop="230dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:id="@+id/txt_pass_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="sans-serif"
            app:fontFamily="@font/nunito_sans">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:id="@+id/txt_pass"/>
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>